--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,11 @@ authors = ["a-yanovskiy <a.e.yanovskiy@gmail.com>"]
 python = "^3.8"
 
 [tool.poetry.dev-dependencies]
+flake8 = "^3.9.0"
+
+
+[tool.poetry.scripts]
+gendiff = "gendiff.scripts.gendiff:main"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
