--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ packages = [
 [tool.poetry.dependencies]
 python = "^3.8"
 pip = "^21.0.1"
+PyYAML = "^5.4.1"
+pytest-cov = "^2.11.1"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^3.9.0"
