--- a/.github/workflows/codeclimate.yml
+++ b/.github/workflows/codeclimate.yml
@@ -1,20 +1,20 @@
-  >coverage:
-   > needs: [ check ]
+  coverage:
+    needs: [ check ]
  
-    >name: coverage
+    name: coverage
  
-    >runs-on: ubuntu-latest
+    runs-on: ubuntu-latest
  
-    >steps:
-    >- uses: actions/checkout@master
-    >- uses: actions/setup-python@v2
-    >  with:
-     >   python-version: 3.8.5
-    >- run:
-     >     pip install poetry
-      >    make install
-    >- uses: paambaati/codeclimate-action@v2.7.5
-     > env:
-     >   CC_TEST_REPORTER_ID: b0706ad6ae7d8cc680077edff0055c0624e7243cdad5d49a59243be20d098a68
-     > with:
-      >  coverageCommand: make test-coverage
+    steps:
+    - uses: actions/checkout@master
+    - uses: actions/setup-python@v2
+      with:
+        python-version: 3.8.5
+    - run:
+          pip install poetry
+          make install
+    - uses: paambaati/codeclimate-action@v2.7.5
+      env:
+        CC_TEST_REPORTER_ID: b0706ad6ae7d8cc680077edff0055c0624e7243cdad5d49a59243be20d098a68
+      with:
+        coverageCommand: make test-coverage
