--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-    "python.pythonPath": "/home/art/pythonProjects/env/bin/activate"
+    "python.pythonPath": "/home/art/pythonProjects/env/bin/python3",
+    "python.linting.flake8Enabled": true,
+    "python.linting.enabled": true
 }
