--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "python.pythonPath": "/home/art/pythonProjects/env/bin/python3",
+    "python.linting.enabled": true,
+    "editor.formatOnSave": true,
+    "python.formatting.provider": "black", // or "black" here
     "python.linting.flake8Enabled": true,
-    "python.linting.enabled": true
 }
