--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ pytest-cov = "^2.11.1"
 [tool.poetry.dev-dependencies]
 flake8 = "^3.9.0"
 autopep8 = "^1.5.7"
+yapf = "^0.32.0"
 
 
 [tool.poetry.scripts]
