--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "gendiff"
+name = "hexlet-code"
 version = "0.2.1"
 description = ""
 authors = ["a-yanovskiy <a.e.yanovskiy@gmail.com>"]
