--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ pytest-cov = "^2.11.1"
 flake8 = "^3.9.0"
 autopep8 = "^1.5.7"
 yapf = "^0.32.0"
+pytest = "^7.1.2"
 
 [tool.poetry.scripts]
 gendiff = "gendiff.scripts.gendiff:main"
